# mmm-from-scratch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: mmm.yaml  project.yaml
docker/: Dockerfile  docker-compose.yml
docs/: docs_notebook_style_guide.md  mmm_key_concepts.md
notebooks/: 00_problem_context.ipynb  00_problem_context_en.ipynb  00_problem_context_es.ipynb  01_data_audit_eda_adjusted.ipynb  02_baseline_model.ipynb  03_adstock.ipynb  04_saturation.ipynb  05_ridge_regularization.ipynb  06_temporal_validation.ipynb  07_interpretation_next_steps.ipynb  keynotebook_mmm.ipynb
src/ma_mmm_package/pipelines/: run_mmm.py
src/streamlit_app/: app.py
writing/: notes.md  post_template.md
